--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is a Header</h1>
     <p>hello world</p>
     <p>paragraph number 1 </p>
     <p>paragraph number 2 </p>
